[gd_scene load_steps=6 format=3 uid="uid://dssjicbdinq0"]

[ext_resource type="Script" uid="uid://cnr7scsem8uu1" path="res://player_score.gd" id="1_s4uw3"]
[ext_resource type="PackedScene" uid="uid://cipejc7qeey41" path="res://ChatControl.tscn" id="2_pucub"]

[sub_resource type="LabelSettings" id="LabelSettings_0sppj"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_ylnox"]
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_wttdi"]
font_size = 30

[node name="PlayerScore" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.068
anchor_right = 0.5
anchor_bottom = 0.068
offset_left = -574.0
offset_top = -41.064
offset_right = 576.0
offset_bottom = 599.936
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_s4uw3")

[node name="P1Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.358
anchor_top = 0.059
anchor_right = 0.358
anchor_bottom = 0.059
offset_left = -11.7
offset_top = -27.819
offset_right = 11.3
offset_bottom = 27.181
grow_horizontal = 2
text = "P1: 0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P2Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.445
anchor_top = 0.059
anchor_right = 0.445
anchor_bottom = 0.059
offset_left = -11.75
offset_top = -27.819
offset_right = 11.25
offset_bottom = 27.181
grow_horizontal = 2
text = "P2: 0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P3Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.532
anchor_top = 0.059
anchor_right = 0.532
anchor_bottom = 0.059
offset_left = -11.8
offset_top = -27.819
offset_right = 11.2
offset_bottom = 27.181
grow_horizontal = 2
text = "P3: 0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P4Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.619
anchor_top = 0.059
anchor_right = 0.619
anchor_bottom = 0.059
offset_left = -11.85
offset_top = -27.819
offset_right = 11.15
offset_bottom = 27.181
grow_horizontal = 2
text = "P4 : 0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P1Value" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.358
anchor_top = 0.059
anchor_right = 0.358
anchor_bottom = 0.059
offset_left = -11.7
offset_top = -27.819
offset_right = 11.3
offset_bottom = 27.181
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P2Value" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.445
anchor_top = 0.059
anchor_right = 0.445
anchor_bottom = 0.059
offset_left = -11.75
offset_top = -27.819
offset_right = 11.25
offset_bottom = 27.181
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P3Value" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.532
anchor_top = 0.059
anchor_right = 0.532
anchor_bottom = 0.059
offset_left = -11.8
offset_top = -27.819
offset_right = 11.2
offset_bottom = 27.181
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="P4Value" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.619
anchor_top = 0.059
anchor_right = 0.619
anchor_bottom = 0.059
offset_left = -11.85
offset_top = -27.819
offset_right = 11.15
offset_bottom = 27.181
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_0sppj")

[node name="WinnerLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.426
anchor_right = 0.5
anchor_bottom = 0.426
offset_left = -19.0
offset_top = -10.066
offset_right = 21.0
offset_bottom = 12.934
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_ylnox")

[node name="Restart" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -31.0
offset_right = 37.5
grow_horizontal = 2
grow_vertical = 0
text = "RESTART"

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 590.0
offset_right = -53.0
offset_bottom = 632.0
grow_horizontal = 0
text = "00:00"
label_settings = SubResource("LabelSettings_wttdi")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ChatControl" parent="." instance=ExtResource("2_pucub")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
